--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/node": "^16.11.13",
     "@types/react": "^17.0.37",
+    "@types/uuid": "^8.3.3",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "typescript": "^4.5.4"
