--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-ga": "^3.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
