--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
+    "sass": "^1.45.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
