--- a/package.json
+++ b/package.json
@@ -7,7 +7,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx prettier --write ."
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "bracketSameLine": false,
+    "bracketSpacing": true,
+    "jsxSingleQuote": true,
+    "printWidth": 120,
+    "tabWidth": 4,
+    "trailingComma": "es5",
+    "semi": false,
+    "singleQuote": true
   },
   "dependencies": {
     "next": "12.0.7",
@@ -22,6 +34,7 @@
     "@types/uuid": "^8.3.3",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "prettier": "2.5.1",
     "sass": "^1.45.0",
     "typescript": "^4.5.4"
   }
