--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,8 @@
 {
-  "extends": [
-    "next",
-    "next/core-web-vitals"
-  ],
-  "rules": {
-    "react/no-unescaped-entities": "off",
-    "react/display-name": "off",
-    "@next/next/no-img-element": "off"
-  }
+    "extends": ["next", "next/core-web-vitals"],
+    "rules": {
+        "react/no-unescaped-entities": "off",
+        "react/display-name": "off",
+        "@next/next/no-img-element": "off"
+    }
 }
