--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "arrowParens": "always",
         "bracketSameLine": false,
         "bracketSpacing": true,
+        "endOfLine": "crlf",
         "jsxSingleQuote": true,
         "printWidth": 100,
         "tabWidth": 4,
