--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "arrowParens": "always",
         "bracketSameLine": false,
         "bracketSpacing": true,
-        "endOfLine": "crlf",
+        "endOfLine": "auto",
         "jsxSingleQuote": true,
         "printWidth": 100,
         "tabWidth": 4,
