--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "postbuild": "next-sitemap --config sitemap-config.js",
         "start": "next start",
         "lint": "next lint",
         "format": "npx prettier --write ."
@@ -35,6 +36,7 @@
         "@types/uuid": "^8.3.3",
         "eslint": "8.4.1",
         "eslint-config-next": "12.0.7",
+        "next-sitemap": "^1.6.203",
         "prettier": "2.5.1",
         "sass": "^1.45.0",
         "typescript": "^4.5.4"
