--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
         "format": "npx prettier --write ."
     },
     "dependencies": {
+        "nanoid": "^3.2.0",
         "next": "12.0.7",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-ga": "^3.3.0",
-        "uuid": "^8.3.2"
+        "react-ga": "^3.3.0"
     },
     "devDependencies": {
         "@types/node": "^16.11.13",
