--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     },
     "dependencies": {
         "nanoid": "^3.2.0",
-        "next": "12.0.7",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
+        "next": "^12.0.8",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-ga": "^3.3.0"
     },
     "devDependencies": {
