--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "typescript": "^4.5.4"
     },
     "overrides": {
-        "node-fetch": "3.1.1"
+        "next": {
+            "node-fetch": "3.1.1"
+        }
     }
 }
