--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "dev": "next-sitemap --config sitemap-config.js && next dev",
-        "build": "next build && next export",
+        "build": "next build",
         "postbuild": "next-sitemap --config sitemap-config.js",
         "start": "next start",
         "lint": "next lint",
