--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "private": true,
     "scripts": {
         "dev": "next-sitemap --config sitemap-config.js && next dev",
-        "build": "next build",
+        "build": "next build && next export",
         "postbuild": "next-sitemap --config sitemap-config.js",
-        "start": "next start",
+        "start": "next build && next start",
         "lint": "next lint",
         "format": "npx prettier --write ."
     },
