reorder build script commands

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "dev": "next-sitemap --config sitemap-config.js && next dev",
-        "build": "next build && next export && next-sitemap --config sitemap-config.js",
+        "build": "next build && next-sitemap --config sitemap-config.js && next export",
         "start": "next build && next start",
         "lint": "next lint",
         "format": "npx prettier --write ."
