--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "next-sitemap --config sitemap-config.js && next dev",
         "build": "next build && next-sitemap --config sitemap-config.js && next export",
-        "start": "next build && next start",
+        "start": "next start",
         "lint": "next lint",
         "format": "npx prettier --write ."
     },
@@ -27,10 +27,5 @@
         "prettier": "2.5.1",
         "sass": "^1.49.7",
         "typescript": "^4.5.5"
-    },
-    "overrides": {
-        "next": {
-            "node-fetch": "3.1.1"
-        }
     }
 }
