--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "scripts": {
         "dev": "next-sitemap --config sitemap-config.js && next dev",
         "build": "next build && next-sitemap --config sitemap-config.js && next export",
-        "start": "next build && next start",
+        "start": "next start",
         "lint": "next lint",
         "format": "npx prettier --write ."
     },
     "dependencies": {
         "nanoid": "^3.2.0",
-        "next": "^12.0.9",
+        "next": "^12.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-ga": "^3.3.0"
@@ -27,10 +27,5 @@
         "prettier": "2.5.1",
         "sass": "^1.45.0",
         "typescript": "^4.5.4"
-    },
-    "overrides": {
-        "next": {
-            "node-fetch": "3.1.1"
-        }
     }
 }
