--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
         "react-ga": "^3.3.0"
     },
     "devDependencies": {
-        "@types/node": "^16.11.13",
-        "@types/react": "^17.0.37",
-        "eslint": "8.4.1",
-        "eslint-config-next": "12.0.7",
+        "@types/node": "^17.0.18",
+        "@types/react": "^17.0.39",
+        "eslint": "^8.9.0",
+        "eslint-config-next": "^12.1.0",
         "next-sitemap": "^1.6.203",
-        "prettier": "2.5.1",
-        "sass": "^1.45.0",
-        "typescript": "^4.5.4"
+        "prettier": "^2.5.1",
+        "sass": "^1.49.8",
+        "typescript": "^4.5.5"
     }
 }
