--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     },
     "dependencies": {
         "nanoid": "^3.3.1",
-        "next": "^12.1.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "next": "^12.1.4",
+        "react": "^18.0.0-rc.3",
+        "react-dom": "^18.0.0-rc.3",
         "react-ga": "^3.3.0"
     },
     "devDependencies": {
