--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     },
     "dependencies": {
         "nanoid": "^3.3.1",
-        "next": "^12.1.4",
-        "react": "^18.0.0-rc.3",
-        "react-dom": "^18.0.0-rc.3",
+        "next": "^13.1.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-ga": "^3.3.0"
     },
     "devDependencies": {
         "@types/node": "^17.0.18",
         "@types/react": "^17.0.39",
         "eslint": "^8.9.0",
-        "eslint-config-next": "^12.1.0",
+        "eslint-config-next": "^13.1.2",
         "next-sitemap": "^1.6.203",
         "prettier": "^2.5.1",
         "sass": "^1.49.8",
