--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "private": true,
     "scripts": {
         "dev": "next-sitemap --config sitemap-config.js && next dev",
-        "build": "next build && next export",
+        "build": "next build",
         "postbuild": "next-sitemap --config sitemap-config.js",
         "start": "next start",
         "lint": "next lint",
         "format": "npx prettier --write ."
     },
     "dependencies": {
-        "nanoid": "^3.3.1",
-        "next": "^12.1.4",
+        "nanoid": "^4.0.1",
+        "next": "^13.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-ga": "^3.3.0"
@@ -22,7 +22,7 @@
         "@types/node": "^17.0.18",
         "@types/react": "^17.0.39",
         "eslint": "^8.9.0",
-        "eslint-config-next": "^12.1.0",
+        "eslint-config-next": "^13.2.4",
         "next-sitemap": "^1.6.203",
         "prettier": "^2.5.1",
         "sass": "^1.49.8",
