--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "dev": "next-sitemap --config sitemap-config.js && next dev",
-        "build": "next build && next export",
+        "build": "next build",
         "postbuild": "next-sitemap --config sitemap-config.js",
         "start": "next start",
         "lint": "next lint",
@@ -13,7 +13,7 @@
     },
     "dependencies": {
         "nanoid": "^4.0.1",
-        "next": "^13.2.4",
+        "next": "13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-ga": "^3.3.0"
