--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "dependencies": {
         "nanoid": "^4.0.1",
-        "next": "13.1.1",
+        "next": "^13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-ga": "^3.3.0"
@@ -21,11 +21,11 @@
     "devDependencies": {
         "@types/node": "^17.0.18",
         "@types/react": "^17.0.39",
-        "eslint": "^8.9.0",
+        "eslint": "^8.36.0",
         "eslint-config-next": "^13.2.4",
         "next-sitemap": "^1.6.203",
-        "prettier": "^2.5.1",
+        "prettier": "^2.8.4",
         "sass": "^1.59.3",
-        "typescript": "^4.5.5"
+        "typescript": "^5.0.2"
     }
 }
