reconfigure dev script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "email": "sethvm64@gmail.com",
     "private": true,
     "scripts": {
-        "dev": "next-sitemap --config sitemap-config.js && next dev",
+        "dev": "next build && next-sitemap --config sitemap-config.js && next dev",
         "build": "next build",
         "postbuild": "next-sitemap --config sitemap-config.js",
         "start": "next start",
