--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "next": "^13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-ga": "^3.3.1"
+        "react-ga": "^3.3.1",
+        "react-ga4": "^2.1.0"
     },
     "devDependencies": {
         "@types/node": "^17.0.18",
